Add support for 'Julia'

--- a/index.less
+++ b/index.less
@@ -119,6 +119,7 @@ LESS:                 http://lesscss.org
 @import "./styles/languages/Jade.less";
 @import "./styles/languages/JavaScript.less";
 @import "./styles/languages/JSON.less";
+@import "./styles/languages/Julia.less";
 @import "./styles/languages/LESS.less";
 @import "./styles/languages/Markdown.less";
 @import "./styles/languages/Mustache.less";
