Add support for 'Shell'

--- a/index.less
+++ b/index.less
@@ -127,6 +127,7 @@ LESS:                 http://lesscss.org
 @import "./styles/languages/Python.less";
 @import "./styles/languages/Ruby.less";
 @import "./styles/languages/SASS.less";
+@import "./styles/languages/Shell.less";
 @import "./styles/languages/XML.less";
 @import "./styles/languages/YAML.less";
 
