--- a/index.less
+++ b/index.less
@@ -54,7 +54,7 @@ Syntax Highlighting actually includes:
 
 [Version]
 LATEST
-  - stable:     0.2.1 (https://github.com/arcticicestudio/northem-dark-atom-syntax/releases/tag/v0.2.1)
+  - stable:     0.2.1 (https://github.com/arcticicestudio/northem-dark-atom-syntax/releases/latest)
   - snapshot:   /
 
 status: ìndev
