Tweak description for 'Northem Dark Atom UI' and homepage notice

--- a/index.less
+++ b/index.less
@@ -11,7 +11,7 @@
 #         development@arcticicestudio.com        #
 #                                                #
 #      Created : 2015-03-15 20:17 +0100 UTC      #
-#      Modified: 2015-05-24 10:56 +0100 UTC      #
+#      Modified: 2015-06-05 13:42 +0100 UTC      #
 #************************************************#
 
 [Description]
@@ -23,7 +23,7 @@ Also available as:
   - "Northem Atom Syntax"         (https://github.com/arcticicestudio/northem-atom-syntax)
   - "Northem Light Atom Syntax"   (https://github.com/arcticicestudio/northem-light-atom-syntax)
 
-Also make sure to check out "Northem Dark Atom UI" (https://github.com/arcticicestudio/northem-dark-atom-ui)!
+Make sure to check out "Northem Dark Atom UI" (https://github.com/arcticicestudio/northem-dark-atom-ui)!
 
 [Other Projects]
   - "Northem Dark Eclipse Syntax"    (https://github.com/arcticicestudio/northem-dark-eclipse-syntax)
@@ -31,7 +31,7 @@ Also make sure to check out "Northem Dark Atom UI" (https://github.com/arcticice
   - "Northem Dark GTK"               (in drafting)
   - "Northem Dark Notepad++"         (https://github.com/arcticicestudio/northem-dark-notepadplusplus) (Windows only)
 
-Visit the [official homepage](http://arcticicestudio.com/Northem) (actually under construction) for more informations.
+Visit the official homepage http://arcticicestudio.com/Northem (actually under construction) for more informations.
 
 [Languages]
 Syntax Highlighting actually includes:
