Add missing '@color-syntax-macro'

--- a/styles/colors.less
+++ b/styles/colors.less
@@ -26,6 +26,7 @@
 @color-syntax-require:    @dark-blue;
 @color-syntax-include:    @dark-blue;
 @color-syntax-doctype:    @dark-blue;
+@color-syntax-macro:      @dark-blue;
 @color-syntax-type:       @aqua;
 
 /*
