Add language specific color variables for Haskell

--- a/styles/colors.less
+++ b/styles/colors.less
@@ -102,6 +102,13 @@
 @color-git-diff-removed:  @red;
 
 /*
+ * ===========
+ * = Haskell =
+ * ===========
+ */
+@color-syntax-haskell-preprocessor: @dark-blue;
+
+/*
  * ========
  * = HTML =
  * ========
