--- a/index.less
+++ b/index.less
@@ -3,7 +3,7 @@
 #           Northem Dark Atom Syntax             #
 #------------------------------------------------#
 #           northem-dark-atom-syntax             #
-#                 version 0.3.1                  #
+#                 version 0.4.0                  #
 #       http://arcticicestudio.com/Northem       #
 #                                                #
 #               Arctic Ice Studio                #
@@ -11,7 +11,7 @@
 #         development@arcticicestudio.com        #
 #                                                #
 #      Created : 2015-03-15 20:17 +0100 UTC      #
-#      Modified: 2015-08-02 18:08 +0100 UTC      #
+#      Modified: 2015-08-02 20:30 +0100 UTC      #
 #************************************************#
 
 [Description]
@@ -38,6 +38,7 @@ Syntax Highlighting actually includes:
   - CoffeeScript    (https://atom.io/packages/language-coffee-script)
   - CSS             (https://atom.io/packages/language-css)
   - diff            (https://atom.io/packages/git-diff)
+  - Haskell         (https://atom.io/packages/language-haskell)
   - HTML            (https://atom.io/packages/language-html)
   - Jade            (https://atom.io/packages/language-jade)
   - JavaScript      (https://atom.io/packages/language-javascript)
@@ -54,7 +55,7 @@ Syntax Highlighting actually includes:
 
 [Version]
 LATEST
-  - stable:     0.3.1 (https://github.com/arcticicestudio/northem-dark-atom-syntax/releases/latest)
+  - stable:     0.4.0 (https://github.com/arcticicestudio/northem-dark-atom-syntax/releases/latest)
   - snapshot:   /
 
 status: ìndev
@@ -71,6 +72,8 @@ Please report bugs and suggestions for improvement/language support at https://g
 [Recommendations]
 This theme matches the Open Source font "Source Code Pro" (https://typekit.com/fonts/source-code-pro).
 Visit the GitHub Repository at "https://github.com/adobe-fonts/source-code-pro" for more informations.
+
+The colored file icons on the preview screenshot are provided by the "file-icons" (https://atom.io/packages/file-icons) package.
 
 [Installation]
 Download and install the recommended font, read section "Recommendations" for more informations.
