Import language style file for Java in the index

--- a/index.less
+++ b/index.less
@@ -11,7 +11,7 @@
 #         development@arcticicestudio.com        #
 #                                                #
 #      Created : 2015-03-15 20:17 +0100 UTC      #
-#      Modified: 2015-08-02 20:30 +0100 UTC      #
+#      Modified: 2015-08-08 23:50 +0100 UTC      #
 #************************************************#
 
 [Description]
@@ -41,6 +41,7 @@ Syntax Highlighting actually includes:
   - Haskell         (https://atom.io/packages/language-haskell)
   - HTML            (https://atom.io/packages/language-html)
   - Jade            (https://atom.io/packages/language-jade)
+  - Java            (https://atom.io/packages/language-java)
   - JavaScript      (https://atom.io/packages/language-javascript)
   - JSON            (https://atom.io/packages/language-json)
   - LESS            (https://atom.io/packages/language-lesss)
@@ -121,6 +122,7 @@ LESS:                 http://lesscss.org
 @import "./styles/languages/Haskell.less";
 @import "./styles/languages/HTML.less";
 @import "./styles/languages/Jade.less";
+@import "./styles/languages/Java.less";
 @import "./styles/languages/JavaScript.less";
 @import "./styles/languages/JSON.less";
 @import "./styles/languages/Julia.less";
