Add language specific color variables for Java

--- a/styles/colors.less
+++ b/styles/colors.less
@@ -124,6 +124,14 @@
 @color-syntax-jade-variable-include:  @aqua;
 
 /*
+ * ========
+ * = Java =
+ * ========
+ */
+@color-syntax-java-annotation:    @orange;
+@color-syntax-java-package:       @dirty-white;
+
+/*
  * ==============
  * = JavaScript =
  * ==============
