--- a/index.less
+++ b/index.less
@@ -11,7 +11,7 @@
 #         development@arcticicestudio.com        #
 #                                                #
 #      Created : 2015-03-15 20:17 +0100 UTC      #
-#      Modified: 2015-08-08 13:04 +0100 UTC      #
+#      Modified: 2015-08-12 20:42 +0100 UTC      #
 #************************************************#
 
 [Description]
@@ -119,6 +119,7 @@ LESS:                 http://lesscss.org
  */
 @import "./styles/languages/CoffeeScript.less";
 @import "./styles/languages/CSS.less";
+@import "./styles/languages/HAML.less";
 @import "./styles/languages/Haskell.less";
 @import "./styles/languages/HTML.less";
 @import "./styles/languages/Jade.less";
