Implement styles classes for lamguage 'HAML'

--- a/styles/languages/HAML.less
+++ b/styles/languages/HAML.less
@@ -10,7 +10,7 @@
 #         development@arcticicestudio.com        #
 #                                                #
 #      Created : 2015-08-12 14:47 +0100 UTC      #
-#      Modified: 2015-08-12 15:45 +0100 UTC      #
+#      Modified: 2015-08-12 20:42 +0100 UTC      #
 #************************************************#
 
 [Description]
@@ -28,5 +28,128 @@ Northem color palette itself is licensed under "CC BY-NC-SA 4.0" (http://creativ
 */
 .text.haml,
 .source.ruby.embedded.haml {
-  
+  color: @color-syntax-other;
+  /*
+   * ===============
+   * = PUNCTUATION =
+   * ===============
+   */
+  .punctuation {
+    &.definition {
+      &.tag {
+        color: @color-syntax-keyword;
+      }
+      &.string {
+        &.begin, &.end {
+          color: @color-syntax-symbol;
+        }
+      }
+      &.constant {
+        color: @color-syntax-operator;
+      }
+      &.prolog {
+        color: @color-syntax-doctype;
+        font-weight: bold;
+      }
+    }
+    &.separator {
+      &.key-value {
+        color: @color-syntax-operator;
+      }
+      &.other {
+        color: @color-syntax-operator;
+      }
+      &.object {
+        color: @color-syntax-symbol;
+      }
+    }
+  }
+
+  /*
+   * ===========
+   * = KEYWORD =
+   * ===========
+   */
+  .keyword {
+    &.control {
+      color: @color-syntax-keyword;
+    }
+  }
+
+  /*
+   * ===========
+   * = SUPPORT =
+   * ===========
+   */
+  .support {
+    &.function {
+      color: @color-syntax-function;
+
+      /*&.viewhelpers {
+        color: @color-syntax-function;
+      }*/
+    }
+  }
+
+  /*
+   * ==========
+   * = ENTITY =
+   * ==========
+   */
+  .entity {
+    &.name {
+      &.tag {
+        color: @color-syntax-keyword;
+
+        &.class {
+          color: @color-syntax-class;
+        }
+      }
+    }
+  }
+
+  /*
+   * ============
+   * = CONSTANT =
+   * ============
+   */
+  .constant {
+    &.other {
+      &.symbol {
+        color: @color-syntax-variable;
+
+        &.hashkey {
+          color: @color-syntax-constant;
+        }
+      }
+    }
+    &.numeric {
+      color: @color-syntax-number;
+    }
+  }
+
+  /*
+   * ==========
+   * = STRING =
+   * ==========
+   */
+  .string {
+    color: @color-syntax-string;
+  }
+
+  /*
+   * ========
+   * = META =
+   * ========
+   */
+  .meta {
+    &.line {
+      color: @color-syntax-other;
+    }
+    &.section {
+      &.attributes {
+        color: @color-syntax-symbol;
+      }
+    }
+  }
 }
