--- a/index.less
+++ b/index.less
@@ -3,7 +3,7 @@
 #           Northem Dark Atom Syntax             #
 #------------------------------------------------#
 #           northem-dark-atom-syntax             #
-#                 version 0.5.0                  #
+#                 version 0.6.0                  #
 #       http://arcticicestudio.com/Northem       #
 #                                                #
 #               Arctic Ice Studio                #
@@ -38,6 +38,7 @@ Syntax Highlighting actually includes:
   - CoffeeScript    (https://atom.io/packages/language-coffee-script)
   - CSS             (https://atom.io/packages/language-css)
   - diff            (https://atom.io/packages/git-diff)
+  - HAML            (https://atom.io/packages/language-haml)
   - Haskell         (https://atom.io/packages/language-haskell)
   - HTML            (https://atom.io/packages/language-html)
   - Jade            (https://atom.io/packages/language-jade)
@@ -56,7 +57,7 @@ Syntax Highlighting actually includes:
 
 [Version]
 LATEST
-  - stable:     0.5.0 (https://github.com/arcticicestudio/northem-dark-atom-syntax/releases/latest)
+  - stable:     0.6.0 (https://github.com/arcticicestudio/northem-dark-atom-syntax/releases/latest)
   - snapshot:   /
 
 status: ìndev
