Add language specific color variables for 'GLSL'

--- a/styles/colors.less
+++ b/styles/colors.less
@@ -102,6 +102,13 @@
 @color-git-diff-removed:  @red;
 
 /*
+ * ========
+ * = GLSL =
+ * ========
+ */
+@color-syntax-glsl-preprocessor: @dark-blue;
+
+/*
  * ===========
  * = Haskell =
  * ===========
