Import 'GLSL.less' into the index

--- a/index.less
+++ b/index.less
@@ -11,7 +11,7 @@
 #         development@arcticicestudio.com        #
 #                                                #
 #      Created : 2015-03-15 20:17 +0100 UTC      #
-#      Modified: 2015-08-12 20:42 +0100 UTC      #
+#      Modified: 2015-08-16 12:38 +0100 UTC      #
 #************************************************#
 
 [Description]
@@ -37,6 +37,7 @@ Visit the official homepage http://arcticicestudio.com/Northem (actually under c
 Syntax Highlighting actually includes:
   - CoffeeScript    (https://atom.io/packages/language-coffee-script)
   - CSS             (https://atom.io/packages/language-css)
+  - GLSL            (https://atom.io/packages/language-glsl)
   - diff            (https://atom.io/packages/git-diff)
   - HAML            (https://atom.io/packages/language-haml)
   - Haskell         (https://atom.io/packages/language-haskell)
@@ -120,6 +121,7 @@ LESS:                 http://lesscss.org
  */
 @import "./styles/languages/CoffeeScript.less";
 @import "./styles/languages/CSS.less";
+@import "./styles/languages/GLSL.less";
 @import "./styles/languages/HAML.less";
 @import "./styles/languages/Haskell.less";
 @import "./styles/languages/HTML.less";
