Import 'R.less' into the index

--- a/index.less
+++ b/index.less
@@ -11,7 +11,7 @@
 #         development@arcticicestudio.com        #
 #                                                #
 #      Created : 2015-03-15 20:17 +0100 UTC      #
-#      Modified: 2015-08-16 12:38 +0100 UTC      #
+#      Modified: 2015-08-16 12:41 +0100 UTC      #
 #************************************************#
 
 [Description]
@@ -51,6 +51,7 @@ Syntax Highlighting actually includes:
   - Mustache        (https://atom.io/packages/language-mustache)
   - PHP             (https://atom.io/packages/language-php)
   - Python          (https://atom.io/packages/language-python)
+  - R               (https://atom.io/packages/language-r)
   - Ruby            (https://atom.io/packages/language-ruby)
   - SASS            (https://atom.io/packages/language-sass)
   - XML             (https://atom.io/packages/language-xml)
@@ -135,6 +136,7 @@ LESS:                 http://lesscss.org
 @import "./styles/languages/Mustache.less";
 @import "./styles/languages/PHP.less";
 @import "./styles/languages/Python.less";
+@import "./styles/languages/R.less";
 @import "./styles/languages/Ruby.less";
 @import "./styles/languages/SASS.less";
 @import "./styles/languages/Shell.less";
