Add highlighting support for 'runhaskell' shebang (language-haskell@1.4.0)

--- a/styles/languages/Haskell.less
+++ b/styles/languages/Haskell.less
@@ -73,6 +73,12 @@ Northem color palette itself is licensed under "CC BY-NC-SA 4.0" (http://creativ
   .comment {
     color: @color-syntax-comment;
     font-weight: normal;
+
+    &.line {
+      &.shebang {
+        color: @color-syntax-haskell-preprocessor;
+      }
+    }
   }
 
   /*
