Add support for tags in 'Haskell'

--- a/styles/languages/Haskell.less
+++ b/styles/languages/Haskell.less
@@ -103,6 +103,9 @@ Northem color palette itself is licensed under "CC BY-NC-SA 4.0" (http://creativ
         color: @color-syntax-function;
       }
     }
+    &.tag {
+      color: @color-syntax-keyword;
+    }
   }
 
   /*
