Update dependency description for 'language-haskell' in comment-head

--- a/styles/languages/Haskell.less
+++ b/styles/languages/Haskell.less
@@ -10,7 +10,7 @@
 #         development@arcticicestudio.com        #
 #                                                #
 #      Created : 2015-08-01 10:18 +0100 UTC      #
-#      Modified: 2015-08-02 18:10 +0100 UTC      #
+#      Modified: 2015-08-27 21:48 +0100 UTC      #
 #************************************************#
 
 [Description]
@@ -18,7 +18,7 @@ This file defines all language specific syntax highlighting classes for Haskell.
 
 [Dependencies]
 Syntax Highlighting based on the following packages:
-  - "language-haskell" (https://atom.io/packages/language-haskell) by "atom-haskell" (https://atom.io/users/atom-haskell)
+  - "language-haskell@1.4.1" (https://atom.io/packages/language-haskell) by "atom-haskell" (https://atom.io/users/atom-haskell)
 
 [License]
 Copyright (C) 2015 Arctic Ice Studio <development@arcticicestudio.com>
