Import 'Clojure.less' into the index and update comment-header

--- a/index.less
+++ b/index.less
@@ -11,7 +11,7 @@
 #         development@arcticicestudio.com        #
 #                                                #
 #      Created : 2015-03-15 20:17 +0100 UTC      #
-#      Modified: 2015-08-29 15:54 +0100 UTC      #
+#      Modified: 2015-08-29 15:57 +0100 UTC      #
 #************************************************#
 
 [Description]
@@ -36,6 +36,7 @@ Visit the official homepage http://arcticicestudio.com/Northem (actually under c
 [Languages]
 Syntax Highlighting actually includes:
   - C               (https://atom.io/packages/language-c)
+  - Clojure         (https://atom.io/packages/language-clojure)
   - CoffeeScript    (https://atom.io/packages/language-coffee-script)
   - CSS             (https://atom.io/packages/language-css)
   - D               (https://atom.io/packages/language-d)
@@ -123,6 +124,7 @@ LESS:                 http://lesscss.org
  * =============
  */
 @import "./styles/languages/C.less";
+@import "./styles/languages/Clojure.less";
 @import "./styles/languages/CoffeeScript.less";
 @import "./styles/languages/CSS.less";
 @import "./styles/languages/D.less";
